Bug 92843 - fix in test-code for file descriptor validity check
Summary: fix in test-code for file descriptor validity check
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-06 06:13 UTC by Pankaj
Modified: 2015-11-09 08:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
p11-kit-0.23.1-test-compat-001 patch (378 bytes, patch)
2015-11-06 06:13 UTC, Pankaj
Details | Splinter Review

Description Pankaj 2015-11-06 06:13:55 UTC
Created attachment 119431 [details] [review]
p11-kit-0.23.1-test-compat-001 patch

Hi,
just check for valid file descriptor before closing it in test-code.
p11-kit-0.23.1/common/test-compat.c:117.

the patch has been attached, please review it.

Thanks!
Pankaj Sharma
Comment 1 Stef Walter 2015-11-09 08:42:53 UTC
Thanks. Merged to git master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.