common: Fix in test-code for file descriptor validity check

https://bugs.freedesktop.org/show_bug.cgi?id=92843